--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,18 @@
-<p>home works!</p>
-sss
+<div class="home-container h-100">
+
+  <div class="home-header">
+    <app-navbar></app-navbar>
+  </div>
+
+  <div class="home-body">
+    <!-- Menu -->
+    <aside class="menu-container h-100">
+      <app-menu></app-menu>
+    </aside>
+    <!-- Router outlet -->
+    <aside class="router-outlet-container h-100">
+      <router-outlet></router-outlet>
+    </aside>
+  </div>
+
+</div>
