--- a/src/app/home/kids/kids.component.html
+++ b/src/app/home/kids/kids.component.html
@@ -1,1 +1,9 @@
-<p>kids works!</p>
+<div class="container h-100">
+  <div class="columns h-100">
+    <div class="column col-6 bg-primary">
+    </div>
+    <div class="column col-6 bg-success">
+      <button class="btn btn-primary">primary button</button>
+    </div>
+  </div>
+</div>
