--- a/src/app/home/settings/settings.component.html
+++ b/src/app/home/settings/settings.component.html
@@ -1,1 +1,32 @@
-<p>settings works!</p>
+<div [formGroup]="formGroup" *ngIf="!isLoading; else loader" class="container h-100">
+  <div class="text-right">
+    <button class="btn">
+      <i class="bx bx-save mr-2"></i>
+      <span>Salva</span>
+    </button>
+  </div>
+  <div class="columns h-100">
+    <div class="column col-4">
+      <div class="form-group">
+        <label class="form-label" for="hour-cost">Costo orario</label>
+        <input class="form-input" type="number" id="hour-cost" placeholder="Costo orario" formControlName="hourCost">
+      </div>
+    </div>
+    <div class="column col-4">
+      <div class="form-group">
+        <label class="form-label" for="extra-hour-cost">Costo ore extra</label>
+        <input class="form-input" type ="number" id="extra-hour-cost" placeholder="Costo ore extra" formControlName="extraHourCost">
+      </div>
+    </div>
+    <div class="column col-4">
+      <div class="form-group">
+        <label class="form-label" for="contract-cost">Costo contratto</label>
+        <input class="form-input" type="number" id="contract-cost" placeholder="Costo contratto" formControlName="contractAmount">
+      </div>
+    </div>
+  </div>
+</div>
+
+<ng-template #loader>
+  <app-loader></app-loader>
+</ng-template>
