--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,19 @@
-@import 'src/styles/_variables.scss';
+// Custom imports
+@import 'src/styles/variables.scss';
+@import 'src/styles/spectre.scss';
 
-/* You can add global styles to this file, and also import other style files */
+// Custom style
+html, body {
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+
+.h-100 {
+  height: 100%!important;
+}
+
+.w-100 {
+  height: 100%!important;
+}
