--- a/src/app/home/navbar/navbar.component.html
+++ b/src/app/home/navbar/navbar.component.html
@@ -6,6 +6,6 @@
     <img class="navbar-logo" src="./assets/images/name-logo.jpg" alt="logo-name">
   </section>
   <section class="navbar-section">
-    <h6 class="text-primary">{{ today | date }}</h6>
+    <h6 class="text-primary mb-0">{{ today | date: 'longDate' }}</h6>
   </section>
 </header>
