--- a/src/app/home/settings/settings.component.html
+++ b/src/app/home/settings/settings.component.html
@@ -1,6 +1,6 @@
 <div [formGroup]="formGroup" class="container h-100 p-5 bg-secondary">
   <div class="text-right">
-    <button class="btn" (click)="save()" [disabled]="isLoading">
+    <button class="btn btn-lg" (click)="save()" [disabled]="isLoading">
       <i class="bx bx-save mr-2"></i>
       <span>Salva</span>
     </button>
@@ -9,30 +9,31 @@
     <div class="column col-4">
       <app-form-group [formGroup]="formGroup" formControlName="hourCost">
         <label class="form-label" for="hour-cost">Costo orario</label>
-        <input class="form-input" type="number" id="hour-cost" placeholder="Costo orario"
-          formControlName="hourCost">
+        <div class="has-icon-left">
+          <input class="form-input" type="number" step="0.01" id="hour-cost" placeholder="Costo orario" formControlName="hourCost">
+          <i class="form-icon bx bx-euro mr-2"></i>
+        </div>
       </app-form-group>
     </div>
     <div class="column col-4">
       <app-form-group [formGroup]="formGroup" formControlName="extraHourCost">
         <label class="form-label" for="extra-hour-cost">Costo ore extra</label>
-        <input class="form-input" type="number" id="extra-hour-cost" placeholder="Costo ore extra"
-          formControlName="extraHourCost">
+        <div class="has-icon-left">
+          <input class="form-input" type="number" step="0.01" id="extra-hour-cost" placeholder="Costo ore extra"
+            formControlName="extraHourCost">
+          <i class="form-icon bx bx-euro mr-2"></i>
+        </div>
       </app-form-group>
     </div>
     <div class="column col-4">
       <app-form-group [formGroup]="formGroup" formControlName="contractAmount">
         <label class="form-label" for="contract-cost">Costo contratto</label>
-        <input class="form-input" type="number" id="contract-cost" placeholder="Costo contratto"
-          formControlName="contractAmount">
+        <div class="has-icon-left">
+          <input class="form-input" type="number" step="0.01" id="contract-cost" placeholder="Costo contratto"
+            formControlName="contractAmount">
+          <i class="form-icon bx bx-euro mr-2"></i>
+        </div>
       </app-form-group>
-    </div>
-    <div class="column col-4">
-      <div class="form-group has-error">
-        <label class="form-label" for="contract-cost">Costo contratto</label>
-        <input class="form-input" type="number" id="contract-cost" placeholder="Costo contratto">
-        <p class="form-input-hint">aaaaaaaaaaaaa</p>
-      </div>
     </div>
   </div>
 </div>
