--- a/src/app/home/menu/menu.component.scss
+++ b/src/app/home/menu/menu.component.scss
@@ -1,21 +1,34 @@
 @import "src/styles/variables";
 
 .menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   margin-top: -0.2rem;
 
-  .menu-item > a {
-    align-items: center;
-    border: 1px solid lighten($primary-color, 30%);
-    color: $primary-color;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  .menu-items {
+    flex: 1;
 
-    span {
-      padding-bottom: $spacing-lg;
-      padding-top: $spacing-lg;
-      text-transform: uppercase;
-      font-weight: 600;
+    .menu-item > a {
+      align-items: center;
+      border: 1px solid lighten($primary-color, 30%);
+      color: $primary-color;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+
+      span {
+        padding-bottom: $spacing-lg;
+        padding-top: $spacing-lg;
+        text-transform: uppercase;
+        font-weight: 600;
+      }
     }
+  }
+
+  .logo img {
+    max-width: 100%;
+    object-fit: contain;
+    opacity: .7;
   }
 }
