--- a/src/app/home/kids/kids.component.html
+++ b/src/app/home/kids/kids.component.html
@@ -1,9 +1,11 @@
-<div class="container h-100">
-  <div class="columns h-100">
-    <div class="column col-6 bg-primary">
-    </div>
-    <div class="column col-6 bg-success">
-      <button class="btn btn-primary">primary button</button>
-    </div>
+<app-hbf-template class="h-100">
+  <div header class="hbf-header">
+
   </div>
-</div>
+  <div body class="hbf-body">
+
+  </div>
+  <div footer class="hbf-footer">
+
+  </div>
+</app-hbf-template>
