--- a/src/app/shared/components/hbf-template/hbf-template.component.html
+++ b/src/app/shared/components/hbf-template/hbf-template.component.html
@@ -1,11 +1,11 @@
-<div class="hbf">
+<div class="hbf h-100">
   <div class="header">
-    <ng-content select="header"></ng-content>
+    <ng-content select="[header]"></ng-content>
   </div>
   <div class="body">
-    <ng-content select="body"></ng-content>
+    <ng-content select="[body]"></ng-content>
   </div>
   <div class="footer">
-    <ng-content select="footer"></ng-content>
+    <ng-content select="[footer]"></ng-content>
   </div>
 </div>
