--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,6 @@
 // Custom imports
 @import 'src/styles/variables.scss';
+@import 'src/styles/devextreme.scss';
 @import 'src/styles/spectre.scss';
 
 // Custom style
