--- a/src/app/home/kids/kids.component.html
+++ b/src/app/home/kids/kids.component.html
@@ -1,11 +1,32 @@
 <app-hbf-template class="h-100">
-  <div header class="hbf-header">
-
+  <div header class="p-5 pb-0 h-100 bg-secondary text-center">
+    <h2 class="mb-0 text-primary">Elenco bambini</h2>
   </div>
-  <div body class="hbf-body">
+  <div body *ngIf="!isLoading; else loader;" class="p-5 h-100 bg-secondary">
+    <dx-data-grid class="h-100" [dataSource]="dataSource" [showBorders]="true" [rowAlternationEnabled]="true" (onSelectionChanged)="onSelection($event)">
+      <dxo-paging [pageSize]="10"></dxo-paging>
+      <dxo-pager [showPageSizeSelector]="true" [allowedPageSizes]="[5, 10, 20]" [showInfo]="true">
+      </dxo-pager>
+      <dxo-selection mode="single"></dxo-selection>
 
+      <dxi-column caption="Bambino">
+        <dxi-column caption="Nome" dataField="firstName" dataType="string"></dxi-column>
+        <dxi-column caption="Cognome" dataField="lastName" dataType="string"></dxi-column>
+        <dxi-column caption="Codice fiscale" dataField="fiscalCode" dataType="string"></dxi-column>
+        <dxi-column caption="Data di nascita" dataField="birthdate" dataType="date" format="dd/MM/yyyy"></dxi-column>
+      </dxi-column>
+      <dxi-column caption="Genitore">
+        <dxi-column caption="Nome" dataField="parentFirstName" dataType="string"></dxi-column>
+        <dxi-column caption="Cognome" dataField="parentLastName" dataType="string"></dxi-column>
+      </dxi-column>
+    </dx-data-grid>
   </div>
-  <div footer class="hbf-footer">
-
+  <div footer class="h-100 bg-secondary">
   </div>
 </app-hbf-template>
+
+<ng-template #loader>
+  <div body class="p-5 h-100 bg-secondary">
+    <app-loader></app-loader>
+  </div>
+</ng-template>
