--- a/src/app/home/menu/menu.component.html
+++ b/src/app/home/menu/menu.component.html
@@ -1,33 +1,14 @@
 <ul class="menu h-100">
 
   <div class="menu-items">
-    <li class="menu-item">
-      <a [routerLink]="" (click)="kids()">
-        <span>Bambini</span>
-        <i class="bx bx-face bx-sm"></i>
+
+    <li *ngFor="let menuItem of menuItems" class="menu-item" [ngClass]="{'bg-secondary': (activeMenuItem$ | async) === menuItem.appSection}">
+      <a [routerLink]="" (click)="handleClick(menuItem.appSection)">
+        <span>{{ menuItem.label }}</span>
+        <i class="bx bx-sm" ngClass="{{ menuItem.class }}"></i>
       </a>
     </li>
 
-    <li class="menu-item">
-      <a [routerLink]="" (click)="presences()">
-        <span>Appello</span>
-        <i class="bx bx-calendar bx-sm"></i>
-      </a>
-    </li>
-
-    <li class="menu-item">
-      <a [routerLink]="">
-        <span>Riepilogo</span>
-        <i class="bx bx-list-check bx-sm"></i>
-      </a>
-    </li>
-
-    <li class="menu-item">
-      <a [routerLink]="" (click)="settings()">
-        <span>Impostazioni</span>
-        <i class="bx bx-cog bx-sm"></i>
-      </a>
-    </li>
   </div>
 
   <div class="logo">
