--- a/src/app/home/kids/kids.component.html
+++ b/src/app/home/kids/kids.component.html
@@ -1,5 +1,5 @@
 <app-hbf-template class="h-100">
-  <div header class="p-5 pb-0 h-100 bg-secondary text-center">
+  <div header class="p-5 pb-0 h-100 text-center">
     <h2 class="mb-0 text-primary">Elenco bambini</h2>
     <div class="text-right">
       <button class="btn btn-secondary btn-lg" type="submit" [disabled]="isLoading" (click)="add()">
@@ -8,7 +8,7 @@
       </button>
     </div>
   </div>
-  <div body *ngIf="!isLoading; else loader;" class="p-5 h-100 bg-secondary">
+  <div body *ngIf="!isLoading; else loader;" class="p-5 h-100">
     <dx-data-grid class="h-100" [dataSource]="dataSource" [showBorders]="true" [rowAlternationEnabled]="true" (onSelectionChanged)="onSelection($event)">
       <dxo-paging [pageSize]="10"></dxo-paging>
       <dxo-pager [showPageSizeSelector]="true" [allowedPageSizes]="[5, 10, 20]" [showInfo]="true">
@@ -27,12 +27,12 @@
       </dxi-column>
     </dx-data-grid>
   </div>
-  <div footer class="h-100 bg-secondary">
+  <div footer class="h-100">
   </div>
 </app-hbf-template>
 
 <ng-template #loader>
-  <div body class="p-5 h-100 bg-secondary">
+  <div body class="p-5 h-100">
     <app-loader></app-loader>
   </div>
 </ng-template>
