--- a/src/app/home/presences/presences.component.html
+++ b/src/app/home/presences/presences.component.html
@@ -1,1 +1,64 @@
-<p>presences works!</p>
+<app-hbf-template class="h-100" [overflowScroll]="true">
+
+  <div header class="p-5 pb-0 h-100 text-center">
+    <h2 class="mb-0 text-primary">Appello</h2>
+    <div class="header-container">
+      <dx-date-box type="date" [value]="date" (onValueChanged)="onDateChanged($event)" [disabled]="isLoading">
+      </dx-date-box>
+      <button class="btn btn-success btn-lg ml-2" type="button" [disabled]="isLoading" (click)="save()">
+        <i class="bx bx-save mr-2"></i>
+        <span>Salva</span>
+      </button>
+    </div>
+  </div>
+
+  <div body *ngIf="!isLoading; else loader;" class="p-5 h-100">
+    <form class="h-100" [formGroup]="formGroup">
+      <div class="container" formArrayName="presences">
+        <section *ngFor="let presenceControl of presencesFormGroups; let i = index;">
+          <div class="columns" [formGroupName]="i">
+            <div class="column col-4">
+              <app-form-group [formGroup]="presenceControl" formControlName="kidName">
+                <span class="kid-name">{{ presenceControl?.controls?.kidName?.value}}</span>
+              </app-form-group>
+            </div>
+            <div class="column col-2">
+              <app-form-group [formGroup]="presenceControl" formControlName="morningEntry">
+                <dx-date-box type="time" id="morning-entry{{i}}" placeholder="Entrata" formControlName="morningEntry">
+                </dx-date-box>
+              </app-form-group>
+            </div>
+            <div class="column col-2">
+              <app-form-group [formGroup]="presenceControl" formControlName="morningExit">
+                <dx-date-box type="time" id="morning-exit{{i}}" placeholder="Uscita" formControlName="morningExit">
+                </dx-date-box>
+              </app-form-group>
+            </div>
+            <div class="column col-2">
+              <app-form-group [formGroup]="presenceControl" formControlName="eveningEntry">
+                <dx-date-box type="time" id="evenint-entry{{i}}" placeholder="Entrata" formControlName="eveningEntry">
+                </dx-date-box>
+              </app-form-group>
+            </div>
+            <div class="column col-2">
+              <app-form-group [formGroup]="presenceControl" formControlName="eveningExit">
+                <dx-date-box type="time" id="eveningExit{{i}}" placeholder="Uscita" formControlName="eveningExit">
+                </dx-date-box>
+              </app-form-group>
+            </div>
+          </div>
+          <div class="divider"></div>
+        </section>
+      </div>
+    </form>
+  </div>
+
+  <div footer class="h-100">
+  </div>
+</app-hbf-template>
+
+<ng-template #loader>
+  <div body class="p-5 h-100">
+    <app-loader></app-loader>
+  </div>
+</ng-template>
