--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -18,3 +18,11 @@ html, body {
 .w-100 {
   height: 100%!important;
 }
+
+.overflow-scroll {
+  overflow: auto;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
