--- a/src/app/home/presences/presences.component.html
+++ b/src/app/home/presences/presences.component.html
@@ -13,48 +13,65 @@
   </div>
 
   <div body *ngIf="!isLoading; else loader;" class="p-5 h-100">
-    <form class="h-100" [formGroup]="formGroup">
-      <div class="container" formArrayName="presences">
-        <section *ngFor="let presenceControl of presencesFormGroups; let i = index;">
-          <div class="columns" [formGroupName]="i">
-            <div class="column col-4">
-              <app-form-group [formGroup]="presenceControl" formControlName="kidName">
-                <span class="kid-name">{{ presenceControl?.controls?.kidName?.value}}</span>
-              </app-form-group>
+    <div class="container">
+      <dx-data-grid class="h-100" [dataSource]="presences" [showBorders]="true" [rowAlternationEnabled]="true">
+        <dxo-editing [allowUpdating]="true" mode="cell"></dxo-editing>
+
+        <dxi-column caption="Bambino">
+          <dxi-column caption="Nome" dataField="kid.firstName" dataType="string" [allowEditing]="false"></dxi-column>
+          <dxi-column caption="Cognome" dataField="kid.lastName" dataType="string" [allowEditing]="false"></dxi-column>
+        </dxi-column>
+        <dxi-column caption="Mattina">
+          <dxi-column caption="Entrata" dataField="morningEntry" dataType="datetime"
+            cellTemplate="morningEntryCellTemplate" editCellTemplate="morningEntryEditCellTemplate">
+            <div *dxTemplate="let data of 'morningEntryCellTemplate'">
+              {{ data?.data?.morningEntry | date:'shortTime' }}
             </div>
-            <div class="column col-2">
-              <app-form-group [formGroup]="presenceControl" formControlName="morningEntry">
-                <dx-date-box type="time" id="morning-entry{{i}}" placeholder="Entrata" formControlName="morningEntry">
-                </dx-date-box>
-              </app-form-group>
+            <div *dxTemplate="let data of 'morningEntryEditCellTemplate'">
+              <dx-date-box (onValueChanged)="onMorningEntryChanged($event, data?.data?.id)" [useMaskBehavior]="true"
+                type="time" [value]="data?.data?.id"></dx-date-box>
             </div>
-            <div class="column col-2">
-              <app-form-group [formGroup]="presenceControl" formControlName="morningExit">
-                <dx-date-box type="time" id="morning-exit{{i}}" placeholder="Uscita" formControlName="morningExit">
-                </dx-date-box>
-              </app-form-group>
+          </dxi-column>
+          <dxi-column caption="Uscita" dataField="morningExit" dataType="datetime"
+            cellTemplate="morningExitCellTemplate" editCellTemplate="morningExitEditCellTemplate">
+            <div *dxTemplate="let data of 'morningExitCellTemplate'">
+              {{ data?.data?.morningExit | date:'shortTime' }}
             </div>
-            <div class="column col-2">
-              <app-form-group [formGroup]="presenceControl" formControlName="eveningEntry">
-                <dx-date-box type="time" id="evenint-entry{{i}}" placeholder="Entrata" formControlName="eveningEntry">
-                </dx-date-box>
-              </app-form-group>
+            <div *dxTemplate="let data of 'morningExitEditCellTemplate'">
+              <dx-date-box (onValueChanged)="onMorningExitChanged($event, data?.data?.id)" [useMaskBehavior]="true"
+                type="time" [value]="data?.data?.id"></dx-date-box>
             </div>
-            <div class="column col-2">
-              <app-form-group [formGroup]="presenceControl" formControlName="eveningExit">
-                <dx-date-box type="time" id="eveningExit{{i}}" placeholder="Uscita" formControlName="eveningExit">
-                </dx-date-box>
-              </app-form-group>
+          </dxi-column>
+        </dxi-column>
+        <dxi-column caption="Pomeriggio">
+          <dxi-column caption="Entrata" dataField="eveningEntry" dataType="datetime"
+            cellTemplate="eveningEntryCellTemplate" editCellTemplate="eveningEntryEditCellTemplate">
+            <div *dxTemplate="let data of 'eveningEntryCellTemplate'">
+              {{ data?.data?.eveningEntry | date:'shortTime' }}
             </div>
-          </div>
-          <div class="divider"></div>
-        </section>
-      </div>
-    </form>
+            <div *dxTemplate="let data of 'eveningEntryEditCellTemplate'">
+              <dx-date-box (onValueChanged)="onEveningEntryChanged($event, data?.data?.id)" [useMaskBehavior]="true"
+                type="time" [value]="data?.data?.id"></dx-date-box>
+            </div>
+          </dxi-column>
+          <dxi-column caption="Uscita" dataField="eveningExit" dataType="datetime"
+            cellTemplate="eveningExitCellTemplate" editCellTemplate="eveningExitEditCellTemplate">
+            <div *dxTemplate="let data of 'eveningExitCellTemplate'">
+              {{ data?.data?.eveningExit | date:'shortTime' }}
+            </div>
+            <div *dxTemplate="let data of 'eveningExitEditCellTemplate'">
+              <dx-date-box (onValueChanged)="onEveningExitChanged($event, data?.data?.id)" [useMaskBehavior]="true"
+                type="time" [value]="data?.data?.id"></dx-date-box>
+            </div>
+          </dxi-column>
+        </dxi-column>
+      </dx-data-grid>
+    </div>
   </div>
 
   <div footer class="h-100">
   </div>
+
 </app-hbf-template>
 
 <ng-template #loader>
