--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,10 +1,11 @@
 // Custom imports
-@import 'src/styles/variables.scss';
-@import 'src/styles/devextreme.scss';
-@import 'src/styles/spectre.scss';
+@import "src/styles/variables.scss";
+@import "src/styles/devextreme.scss";
+@import "src/styles/spectre.scss";
 
 // Custom style
-html, body {
+html,
+body {
   height: 100%;
   padding: 0;
   margin: 0;
@@ -12,11 +13,11 @@ html, body {
 }
 
 .h-100 {
-  height: 100%!important;
+  height: 100% !important;
 }
 
 .w-100 {
-  height: 100%!important;
+  height: 100% !important;
 }
 
 .overflow-scroll {
@@ -26,3 +27,23 @@ html, body {
 .overflow-hidden {
   overflow: hidden;
 }
+
+// .time-control::-webkit-datetime-edit-ampm-field {
+//   display: none;
+// }
+
+// input[type="time"] {
+//   &::-webkit-clear-button {
+//     -webkit-appearance: none;
+//     -moz-appearance: none;
+//     appearance: none;
+//     margin: 0;
+//   }
+//   &::-webkit-inner-spin-button,
+//   &::-webkit-outer-spin-button {
+//     -webkit-appearance: none;
+//     -moz-appearance: none;
+//     appearance: none;
+//     margin: 0;
+//   }
+// }
