--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,5 @@
 // Custom imports
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 @import "src/styles/variables.scss";
 @import "src/styles/devextreme.scss";
 @import "src/styles/spectre.scss";
