--- a/src/app/home/invoices/invoices.component.html
+++ b/src/app/home/invoices/invoices.component.html
@@ -38,6 +38,8 @@
         </dxi-column>
         <dxi-column caption="Numero fattura" dataField="number" dataType="string">
         </dxi-column>
+        <dxi-column caption="Ore totali" dataField="hours" dataType="number" [allowEditing]="false">
+        </dxi-column>
         <dxi-column caption="Totale app" dataField="amount" dataType="number" [allowEditing]="false">
         </dxi-column>
         <dxi-column caption="Totale su fattura" dataField="invoiceAmount" dataType="number">
