--- a/src/app/home/settings/settings.component.html
+++ b/src/app/home/settings/settings.component.html
@@ -1,43 +1,72 @@
 <form [formGroup]="formGroup" class="container h-100 p-5 bg-secondary" (ngSubmit)="save()">
-  <div class="text-right">
-    <button class="btn btn-success btn-lg" type="submit" [disabled]="isLoading">
-      <i class="bx bx-save mr-2"></i>
-      <span>Salva</span>
-    </button>
-  </div>
-  <div class="columns" *ngIf="!isLoading; else loader">
-    <div class="column col-4">
-      <app-form-group [formGroup]="formGroup" formControlName="hourCost">
-        <label class="form-label" for="hour-cost">Costo orario</label>
-        <div class="has-icon-left">
-          <input class="form-input" type="number" step="0.01" id="hour-cost" placeholder="Costo orario" formControlName="hourCost">
-          <i class="form-icon bx bx-euro mr-2"></i>
-        </div>
-      </app-form-group>
+  <app-hbf-template class="h-100">
+    <div header class="p-5 pb-0 h-100 text-center">
+      <h2 class="mb-0 text-primary">Elenco bambini</h2>
+      <div class="text-right">
+        <button class="btn btn-success btn-lg" type="submit" [disabled]="isLoading">
+          <i class="bx bx-save mr-2"></i>
+          <span>Salva</span>
+        </button>
+      </div>
     </div>
-    <div class="column col-4">
-      <app-form-group [formGroup]="formGroup" formControlName="extraHourCost">
-        <label class="form-label" for="extra-hour-cost">Costo ore extra</label>
-        <div class="has-icon-left">
-          <input class="form-input" type="number" step="0.01" id="extra-hour-cost" placeholder="Costo ore extra"
-            formControlName="extraHourCost">
-          <i class="form-icon bx bx-euro mr-2"></i>
+    <div body *ngIf="!isLoading; else loader;" class="p-5 h-100">
+      <div class="columns">
+        <div class="column col-4">
+          <app-form-group [formGroup]="formGroup" formControlName="hourCost">
+            <label class="form-label" for="hour-cost">Costo orario</label>
+            <div class="has-icon-left">
+              <input class="form-input" type="number" step="0.01" id="hour-cost" placeholder="Costo orario"
+                formControlName="hourCost">
+              <i class="form-icon bx bx-euro mr-2"></i>
+            </div>
+          </app-form-group>
         </div>
-      </app-form-group>
-    </div>
-    <div class="column col-4">
-      <app-form-group [formGroup]="formGroup" formControlName="subscriptionAmount">
-        <label class="form-label" for="subscription-cost">Costo contratto</label>
-        <div class="has-icon-left">
-          <input class="form-input" type="number" step="0.01" id="subscription-cost" placeholder="Costo contratto"
-            formControlName="subscriptionAmount">
-          <i class="form-icon bx bx-euro mr-2"></i>
+        <div class="column col-4">
+          <app-form-group [formGroup]="formGroup" formControlName="extraHourCost">
+            <label class="form-label" for="extra-hour-cost">Costo ore extra</label>
+            <div class="has-icon-left">
+              <input class="form-input" type="number" step="0.01" id="extra-hour-cost" placeholder="Costo ore extra"
+                formControlName="extraHourCost">
+              <i class="form-icon bx bx-euro mr-2"></i>
+            </div>
+          </app-form-group>
         </div>
-      </app-form-group>
+      </div>
+
+      <div class="mt-4 text-center">
+        <h2 class="mb-0 text-primary">Lista contratti</h2>
+      </div>
+      <div class="mt-2 text-right">
+        <button class="btn btn-success btn-lg" type="button" [disabled]="isLoading" (click)="createContract()">
+          <i class="bx bx-plus mr-2"></i>
+          <span>Aggiungi tipo contratto</span>
+        </button>
+      </div>
+      <dx-data-grid class="h-100 mt-2" [dataSource]="contracts" [showBorders]="true" [rowAlternationEnabled]="true">
+
+        <dxo-column-chooser [enabled]="true" mode="select"></dxo-column-chooser>
+
+        <dxi-column caption="Descrizione" dataField="description" dataType="string"></dxi-column>
+        <dxi-column caption="Valore minimo" dataField="minContractValue" dataType="number" format="currency"
+          precision="2"></dxi-column>
+        <dxi-column caption="Mensile Si/No" dataField="monthlyContract" dataType="boolean"></dxi-column>
+        <dxi-column caption="Ore/dì" dataField="dailyHours" dataType="number"></dxi-column>
+        <dxi-column caption="Ore/mese" dataField="monthlyHours" dataType="number"></dxi-column>
+        <dxi-column caption="Costo orario" dataField="hourCost" dataType="number" format="currency" precision="2">
+        </dxi-column>
+        <dxi-column caption="Costo extra orario" dataField="extraHourCost" dataType="number" format="currency"
+          precision="2"></dxi-column>
+        <dxi-column caption="Ora inizio servizio" dataField="startTime" dataType="date" format='shortTime'></dxi-column>
+        <dxi-column caption="Ora fine servizio" dataField="endTime" dataType="date" format='shortTime'></dxi-column>
+      </dx-data-grid>
     </div>
-  </div>
+    <div footer class="h-100">
+    </div>
+  </app-hbf-template>
 </form>
 
 <ng-template #loader>
-  <app-loader></app-loader>
+  <div body class="p-5 h-100">
+    <app-loader></app-loader>
+  </div>
 </ng-template>
